# tape_emulator

./: CMakeLists.txt  README.md  delay.conf  generate.sh  sort.sh  test.sh
includes/tape/: file_tape.h  tape.h  tape_utils.h
src/: generate.cpp  sort.cpp
src/tape/: file_tape.cpp  tape_utils.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_methods.cpp  test_tape_utils.cpp  test_utils.h
